<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Nutriast</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="et_name_hint">Enter Your Name</string>
    <string name="et_email_hint">Enter Your Email</string>
    <string name="et_password_hint">Enter Your Password</string>
    <string name="login">Login</string>
    <string name="do_not_have_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="et_date_of_birth_hint">DD/MM/YYYY</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="register">Register</string>
    <string name="profile">Profile</string>
    <string name="user_photo">User Photo</string>
    <string name="personal_information">Personal Information</string>
    <string name="age">Age</string>
    <string name="triple_dots" tools:ignore="TypographyEllipsis">...</string>
    <string name="logout">Logout</string>
    <string name="nutriast_logo">Nutriast Logo</string>
    <string name="home">Home</string>
    <string name="intake_history">Intake History</string>
    <string name="hello">Hello,</string>
    <string name="today_health_status">Today Health Status</string>
    <string name="user_health_status">UNKNOWN</string>
    <string name="feedback_content">You are lacking intake of x for today. It is recommended to consume more x.</string>
    <string name="checkout_today">Checkout Today</string>
    <string name="cardiovascular_risk">Cardiovascular Risk</string>
    <string name="user_cardiovascular_risk">UNKNOWN</string>
    <string name="predict_cardiovascular_risk">Predict Cardiovascular Risk</string>
    <string name="daily_nutrition_needs">Daily Nutrition Needs</string>
    <string name="fat_need">Fat Need</string>
    <string name="calorie_need">Calorie Need</string>
    <string name="fiber_need">Fiber Need</string>
    <string name="carbohydrate_need">Carbohydrate Need</string>
    <string name="protein_need">Protein Need</string>
    <string name="cardiovascular_prediction">Cardiovascular Prediction</string>
    <string name="cardiovascular_prediction_info_1">Up to 73% Accuration using Machine Learning, with 70.000 record data!</string>
    <string name="cardiovascular_prediction_info_2">Cardiovascular disease impacts the heart and blood vessels, and includes conditions like heart disease, heart failure, and stroke.</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="predict">Predict</string>
    <string name="ap_lo">Ap-Lo</string>
    <string name="ap_hi">Ap-Hi</string>
    <string name="glucose">Glucose</string>
    <string name="normal">Normal</string>
    <string name="above_normal">Above Normal</string>
    <string name="well_above_normal">Well Above Normal</string>
    <string name="cancel">Cancel</string>
    <string name="smoke">Smoke</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alcohol">Alcohol</string>
    <string name="active">Active</string>
    <string name="daily_intake_title">How was your food today?</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="daily_intake_history">Daily Intake History</string>
    <string name="intake_history_detail">Intake History Detail</string>
    <string name="health_status">Health Status</string>
    <string name="nutrition_intake_detail">Nutrition Intake Detail</string>
    <string name="fat">Fat</string>
    <string name="calorie">Calorie</string>
    <string name="fiber">Fiber</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="protein">Protein</string>
    <string name="rice">Rice</string>
    <string name="int_default_value_0">0</string>
    <string name="egg">Egg</string>
    <string name="chicken">Chicken</string>
    <string name="beef">Beef</string>
    <string name="tofu">Tofu</string>
    <string name="soybean_cake">Soybean Cake</string>
    <string name="noodle">Noodle</string>
    <string name="potato">Potato</string>
    <string name="milk">Milk</string>
    <string name="apple">Apple</string>
    <string name="watermelon">Watermelon</string>
    <string name="fish">Fish</string>
    <string name="banana">Banana</string>
    <string name="avocado">Avocado</string>
    <string name="papaya">Papaya</string>
    <string name="submit">Submit</string>
    <string name="daily_intake_form_note">Note: Fields input is counted per 1 gram.</string>
    <string name="you_have_no_intake_history">You have no Intake history</string>
</resources>